# PSTensor

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  test.py  test_tf.py  test_torch.py
3rd/: CMakeLists.txt
core/: CMakeLists.txt  base_allocator.cpp  base_allocator.h  cache_allocator.cpp  cache_allocator.h  common.h  copy.cpp  copy.h  enforce.h  global_allocator.cpp  global_allocator.h  tensor.cpp  tensor.h
ps_core/: CMakeLists.txt  base_allocator.cpp  base_allocator.h  cache_allocator.cpp  cache_allocator.h  enforce.h  global_allocator.cpp  global_allocator.h  tensor.cpp  tensor.h
python/: CMakeLists.txt  pybind.cpp  setup.py.in
python/ps_core/: utils.py
python/ps_tensor/: __init__.py  utils.py
